src/client/index.css
/* ... */
.ant-select-selection {
  border: 1px solid #e6e6e6;
}

/* for accessibility */
.isKeyboardUser a:focus,
.isKeyboardUser button:focus,
.isKeyboardUser input:focus,
.isKeyboardUser input[type="checkbox"]:focus + label,
.isKeyboardUser input[type="radio"]:focus + span,
.isKeyboardUser select:focus,
.isKeyboardUser:focus {
  outline: 1px dashed #000;
  outline-offset: 4px;
}

.mq-math-mode .mq-supsub.mq-sup-only {
  margin-bottom: 1em;
}

.mq-math-mode sup.mq-nthroot {
  margin-top: 0.3em;
}

.liveinspect-keydata {
  display: inline;
}
@media print {
  .liveinspect-keydata .kds-noprint {
    display: none;
  }

  .liveinspect-keydata .noprint {
    display: none;
  }
}

.liveinspect-keydata .kds-absolute {
  border-left: 1px solid black;
  border-right: 1px solid black;
  padding: 0 0.3em;
}

.liveinspect-keydata .abs {
  border-left: #000000 1px solid;
  border-right: #000000 1px solid;
  padding: 0 0.3em;
}

.liveinspect-keydata .kds-border-1 {
  border: 1px solid black;
}

.liveinspect-keydata .kds-border-2 {
  border: 2px solid black;
}

.liveinspect-keydata .kds-center {
  margin: 0;
  text-align: center;
}

.liveinspect-keydata .center {
  text-align: center;
  margin: 0;
}

.liveinspect-keydata .kds-exponent {
  font-size: 85%;
  margin-left: -0.4em;
  position: relative;
  top: -1.4em;
}

.liveinspect-keydata sup.frac {
  position: relative;
  top: -1.4em;
  font-size: 70%;
  margin-left: -0.4em;
}

.liveinspect-keydata .kds-fillin {
  border: 1px solid black;
  display: inline-block;
  margin: 0 0.2em;
  padding-left: 1em;
}

.liveinspect-keydata .fillin {
  margin: 0 0.2em;
  padding-left: 1em;
  min-height: 1em;
  border: #000000 1px solid;
  display: inline-block;
  *display: inline;
}

.liveinspect-keydata .kds-font-larger {
  font-size: larger;
}

.liveinspect-keydata .kds-font-smaller {
  font-size: smaller;
}

.liveinspect-keydata table.kds-fraction {
  border: 0;
  display: inline-block;
  font-size: 85%;
  margin: 0;
  padding: 0;
  vertical-align: middle;
}

.liveinspect-keydata table.kds-fraction > tbody > tr > td.kds-numerator {
  border-bottom: 1px solid black;
  border-left: 0;
  border-right: 0;
  border-top: 0;
  text-align: center;
}

.liveinspect-keydata table.kds-fraction > tbody > tr > td.kds-denominator {
  border: 0;
  text-align: center;
}

.liveinspect-keydata table.frac {
  display: inline-block;
  *display: inline;
  vertical-align: middle;
  font-size: 85%;
  border: 0;
  margin: 0;
  padding: 0;
  height: 35px;
  line-height: 14px;
}
.liveinspect-keydata table.frac td {
  min-width: auto !important;
}

.liveinspect-keydata .frac .nu {
  border-left: 0;
  border-top: 0;
  border-right: 0;
  border-bottom: #000000 1px solid;
  text-align: center;
  padding: 2px;
}

.liveinspect-keydata .frac .de {
  border: 0;
  text-align: center;
  padding: 2px;
}

.liveinspect-keydata .kds-hanging-indent {
  margin: 0;
  padding-left: 3em;
  text-indent: -3em;
}

.liveinspect-keydata .kds-image-caption {
  font-family: Verdana, Arial, sans-serif;
  text-align: center;
}

.liveinspect-keydata .kds-image-left {
  float: left;
  margin-right: 5px;
}

.liveinspect-keydata .kds-image-right {
  float: right;
  margin-left: 5px;
}

.liveinspect-keydata .kds-indent {
  text-indent: 3em;
}

.liveinspect-keydata .indent {
  text-indent: 3em;
}

.liveinspect-keydata .kds-nowrap {
  display: inline-block;
  white-space: nowrap;
}

.liveinspect-keydata .kds-overline {
  text-decoration: overline;
}

.liveinspect-keydata .kds-parentheses {
  font-family: "Arial Narrow", Arial, sans-serif;
  font-size: 300%;
  font-weight: normal;
  position: relative;
  top: 8px;
}

.liveinspect-keydata b.frac {
  font-weight: normal;
  font-size: 300%;
  font-family: arial narrow;
  position: relative;
  top: +8px;
}

.liveinspect-keydata .kds-pi {
  font-family: "Times New Roman", serif;
  font-size: 1.2em;
}

.liveinspect-keydata .newradical {
  border-collapse: collapse;
  display: inline-block;
  *display: inline;
  vertical-align: middle;
}

.liveinspect-keydata .newradical td {
  border: 0;
  padding: 0;
  vertical-align: top;
}

.liveinspect-keydata .newradical td.vinculum {
  border-top: 1px solid black;
  padding: 0;
  vertical-align: top;
}

.liveinspect-keydata .newradical div.exp {
  font-size: 0.7em;
  position: relative;
  left: 7px;
  bottom: 5px;
}

.liveinspect-keydata .kds-underline {
  text-decoration: underline;
}

.liveinspect-keydata .under {
  text-decoration: underline;
}

.liveinspect-keydata .kds-verdana2t {
  border: 1px solid white;
  text-align: left;
  text-decoration: none;
  vertical-align: top;
}

.liveinspect-keydata .Verdana2t {
  vertical-align: top;
  text-align: left;
  text-decoration: none;
  border: 1px solid white;
}

.liveinspect-keydata .kds-whole-number {
  display: inline-block;
  font-size: 120%;
  margin: 0 0 0 0.2em;
}

.liveinspect-keydata .whole {
  display: inline-block;
  *display: inline;
  margin: 0 0 0 0.2em;
  font-size: 120%;
}

.liveinspect-keydata table.KdsTable01 {
  border: 1px solid black;
  border-collapse: collapse;
  border-spacing: 0;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > th {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: normal;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > th.bold {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: bold;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > td {
  border: 1px solid black;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable01 > tbody > tr > td.bold {
  border: 1px solid black;
  font-weight: bold;
  padding: 2px;
  text-align: center;
}

.liveinspect-keydata table.KdsTable02 {
  border: 1px solid black;
  border-collapse: collapse;
  border-spacing: 0;
}

.liveinspect-keydata table.KdsTable02 > tbody > tr > th {
  background-color: #d3d3d3;
  border: 1px solid black;
  font-weight: normal;
  padding: 2px;
}
/* ... */

